--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
+            <h1>Renters Guide</h1>
             <span class="subheading">A Blog Theme by Start Bootstrap</span>
           </div>
         </div>
