--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
@@ -49,6 +50,7 @@
         </div>
     </nav>
 
+
     <!-- Page Header -->
     <header class="masthead" style="background-image: url('img/home-bg.jpg')">
         <div class="overlay"></div>
@@ -56,7 +58,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <div class="site-heading">
-                        <h1>Colegio Técnico Profesional de Santo Domingo</h1>
+                        <h1 style="font-family: 'Roboto Condensed', sans-serif;">Colegio Técnico Profesional de Santo Domingo</h1>
                         <span class="subheading">Sistema de recados</span>
                     </div>
                 </div>
@@ -142,7 +144,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://www.facebook.com/santodomingo.tecnicoprofesional/">
                                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
