--- a/post.html
+++ b/post.html
@@ -26,6 +26,7 @@
 <body>
 
     <!-- Navigation -->
+
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="index.html"> <i class="fas fa-graduation-cap"></i> CTP Santo Domingo</a>
@@ -68,6 +69,7 @@
     </header>
 
     <!-- Post Content -->
+
     <article>
         <div class="container">
             <div class="row">
@@ -133,7 +135,7 @@
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#">
+                            <a href="https://www.facebook.com/santodomingo.tecnicoprofesional/">
                                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
