--- a/archive.html
+++ b/archive.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Archive</title>
-  <link rel="icon" href="/img/search_file-512.png"/>
-</head>
-<body>
-<ul>
-  <li><a href="/">Home</a></li>
-  <li><a href="/archive/date">Archive by Date</a></li>
-  <li><a href="/archive/title">Archive by Post Title</a></li>
-</ul>
-</body>
-</html>
+---
+layout: default
+title: Archive
+---
+
+-   [Home](https://love-of-god-and-of-all-men.github.io/)
+-   [Archive by Date](https://love-of-god-and-of-all-men.github.io/archive/date)
+-   [Archive by Post Title](https://love-of-god-and-of-all-men.github.io/archive/title)
