starting to add post functionality

--- a/index.html
+++ b/index.html
@@ -2,3 +2,14 @@
 layout: default
 title: The Love of God and of All Men
 ---
+
+<h1>Latest Posts</h1>
+
+<ul>
+    {% for post in site.posts %}
+    <li>
+        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+        {{ post.excerpt }}
+    </li>
+    {% endfor %}
+</ul>
