--- a/index.html
+++ b/index.html
@@ -13,3 +13,11 @@ title: The Love of God and of All Men
     </li>
     {% endfor %}
 </ul>
+
+<!-- Pager -->
+<ul class="pager">
+    <li class="next">
+        <a href="">&larr; Newer Posts</a>
+        <a href="/index/p2">Older Posts &rarr;</a>
+    </li>
+</ul>
