--- a/contributors.html
+++ b/contributors.html
@@ -7,6 +7,9 @@ title: Contributors
 <ul>
   {% for author in site.authors %}
   <li>
+    <!-- Thanks to the original pen and its creators: https://codepen.io/t_afif/pen/zYLeOLM?editors=1100 -->
+    <img class="profile-img" src="https://love-of-god-and-of-all-men.github.io/assets/images/profiles/{{ author.short_name }}.png"
+      alt="{{ author.name }}">
     <h2><a href="{{ author.url }}">{{ author.name }}</a></h2>
     <p>{{ author.content | markdownify }}</p>
   </li>
