removing the bullet points

--- a/contributors.html
+++ b/contributors.html
@@ -4,7 +4,7 @@ title: Contributors
 ---
 <h1>Contributors</h1>
 
-<ul>
+<ul style="list-style-type: none;">
   {% for author in site.authors %}
   <li>
     <!-- Thanks to the original pen and its creators: https://codepen.io/t_afif/pen/zYLeOLM?editors=1100 -->
