--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ title: The Love of God and of All Men
 {% endfor %}
 
 <!-- Pager -->
-<ul class="pager">
+<!-- <ul class="pager">
     <li class="next">
         <a href="/index/p2">Older Posts &rarr;</a>
     </li>
     <li class="previous">
         <a href="">&larr; Newer Posts</a>
     </li>
-</ul>
+</ul> -->
