fixing the dates

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: The Love of God and of All Men
         {% if author %}
         <a href="{{ author.url }}">{{ author.name }}</a>
         {% endif %}
-        on {{ page.date | date: "%A, %B %-d, %Y" }} at {{ page.date | date: "%l:%M %p %Z" }}
+        page.date | date: "%B %-d, %Y"
     </p>
 </div>
 <hr>
