--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: The Love of God and of All Men
         {% if author %}
         <a href="{{ author.url }}">{{ author.name }}</a>
         {% endif %}
-        on {{ page.date | date: "%A, %B %-d, %Y" }} at {{ page.date | date: "%l:%M %p %Z" }}
+        on {{ post.date | date: "%A, %B %-d, %Y" }} at {{ post.date | date: "%l:%M %p %Z" }}
     </p>
 </div>
 <hr>
