Adding archive button

--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@ title: The Love of God and of All Men
 {% endfor %}
 
 <!-- Pager -->
-<!-- <ul class="pager">
+<ul class="pager">
     <li class="next">
-        <a href="/index/p2">Older Posts &rarr;</a>
+        <a href="archive.md">Archive &rarr;</a>
     </li>
-    <li class="previous">
-        <a href="">&larr; Newer Posts</a>
-    </li>
-</ul> -->
+</ul>
