--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@ title: The Love of God and of All Men
 <!-- Pager -->
 <ul class="pager">
     <li class="next">
-        <a href="archive.md">Archive &rarr;</a>
+        <a href="archive">Archive &rarr;</a>
     </li>
 </ul>
