--- a/contributors.html
+++ b/contributors.html
@@ -9,7 +9,7 @@ title: Contributors
   <li>
     <a href="{{ author.url }}"><img class="profile-img"
         src="https://love-of-god-and-of-all-men.github.io/assets/images/profiles/{{ author.short_name }}.png"
-        alt="{{ author.name }}"></a>
+        alt="photo of {{ author.name }}"></a>
     <h2><a href="{{ author.url }}">{{ author.name }}</a></h2>
     <p>{{ author.content | markdownify }}</p>
   </li>
