removing Bootstrap next class
Removing the "next" class so the archive button will be centered

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: The Love of God and of All Men
 
 <!-- Pager -->
 <ul class="pager">
-    <li class="next">
-        <a href="archive">Archive &rarr;</a>
+    <li>
+        <a href="archive">Post Archive</a>
     </li>
 </ul>
