--- a/code_snippets_for_future_use/comment-box.html
+++ b/code_snippets_for_future_use/comment-box.html
@@ -1,11 +1,11 @@
 <form>
     <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Name</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Your Name" readonly>
+        <label for="nameLabel" class="form-label">Name</label>
+        <input type="text" class="form-control" id="nameLabel" placeholder="Your Name" readonly>
     </div>
     <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Comment</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <label for="commentTextArea" class="form-label">Comment</label>
+        <textarea class="form-control" id="commentTextArea" rows="3"></textarea>
         <div class="mb-3">
             <button type="button" class="btn btn-secondary btn-sm">Reply</button>
         </div>
