--- a/thought-bites.html
+++ b/thought-bites.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Love of God and of All Men
+title: Thought Bites
 ---
 
 <!-- Automatically outputs the 5 latest posts using limit:5 -->
