--- a/newest-post.html
+++ b/newest-post.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Newest Post
+sitemap:
+  exclude: 'yes'
 ---
 
 <!-- Automatically outputs the 5 latest posts except for the posts tagged with "bite" -->
