--- a/newest-post.html
+++ b/newest-post.html
@@ -3,6 +3,7 @@ layout: default
 title: Newest Post
 sitemap:
   exclude: 'yes'
+noindex: true
 ---
 
 <!-- Automatically outputs the 5 latest posts except for the posts tagged with "bite" -->
