--- a/newest-post.html
+++ b/newest-post.html
@@ -12,7 +12,7 @@ noindex: true
 {% include view-asl.html %}
 <h2 class="subheading"><em>{{ page.subtitle }}</em></h2>
 <hr class="subheading">
-{% include share.html %}
+{% include share-newest.html %}
 
 <h1>{{ post.title }}</h1>
 {{ post.content }}
