--- a/newest-post.html
+++ b/newest-post.html
@@ -15,6 +15,7 @@ noindex: true
 {% include share-newest.html %}
 
 <h1>{{ post.title }}</h1>
+<h2 class="subheading"><em>{{ post.subtitle }}</em></h2>
 {{ post.content }}
 
 <hr>
