--- a/newest-post.html
+++ b/newest-post.html
@@ -11,7 +11,7 @@ noindex: true
 {% for post in posts limit:1 %}
 {% include view-asl.html %}
 
-<h1 style="padding-top:20px;">{{ post.title }}</h1>
+<h1 style="margin-top:20px;">{{ post.title }}</h1>
 <h2 class="subheading"><em>{{ post.subtitle }}</em></h2>
 <hr class="subheading">
 
