--- a/404.html
+++ b/404.html
@@ -9,13 +9,9 @@
 </head>
 
 <body>
-  <h1>404: A Haiku</h1>
-  <p>Lost in the unknown,</p>
-  <p>A path we sought to follow,</p>
-  <p>404, not found.</p>
-  <br>
+  <h1>Lost?</h1>
+  <p>You may be lost, but you are not lost to God.</p>
   <p><a href="/">Go Home &rangle;</a></p>
-  <p>Haiku courtesy of <a href="https://chat.openai.com/" target="_blank">ChatGPT</a></p>
 </body>
 
 </html>
