--- a/test.html
+++ b/test.html
@@ -1,3 +1,3 @@
-<iframe src="https://calendar.google.com/calendar/u/0/r/day" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+<iframe sandbox src="https://calendar.google.com/calendar/u/0/r/day" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     Your browser doesn't support iframes
 </iframe>
