update: md-content key from configs + special logic for portfolio image

--- a/published/index.html
+++ b/published/index.html
@@ -40,7 +40,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <img src="https://raw.githubusercontent.com/soumik12345/geekyrakshit-blog/master/images/geekyrakshit.png">
+                    <img src="../assets/images/geekyrakshit.png">
                     <h1>GeekyRakshit</h1>
                     <span class="subheading">Machine Learning Engineer</span>
                 </div>
