--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Love of God and of All Men
+title: Sharing His Love
 ---
 
 <!-- Automatically outputs the 5 latest posts -->
