--- a/wallpapers.html
+++ b/wallpapers.html
@@ -12,15 +12,15 @@ title: Wallpapers
 
     <div class="carousel-inner">
         <div class="item active">
-            <img src="#" class="img-fluid" alt="Chania">
+            <img src="/assets/images/carousel/1Reminder.jpeg" class="img-fluid" alt="Chania">
         </div>
 
         <div class="item">
-            <img src="#" class="img-fluid" alt="Chania">
+            <img src="/assets/images/carousel/2Stone.jpeg" class="img-fluid" alt="Chania">
         </div>
 
         <div class="item">
-            <img src="#" class="img-fluid" alt="Flower">
+            <img src="/assets/images/carousel/3Heaven_temples.jpeg" class="img-fluid" alt="Flower">
         </div>
     </div>
 
