added appropriate alt text

--- a/wallpapers.html
+++ b/wallpapers.html
@@ -12,15 +12,15 @@ title: Wallpapers
 
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/assets/images/carousel/1Reminder.jpeg" class="img-fluid" alt="Chania">
+            <img src="/assets/images/carousel/1Reminder.jpeg" class="img-fluid" alt="Reminder: Those who leave everything in God's hands, will evenually see God's hand in everything.">
         </div>
 
         <div class="item">
-            <img src="/assets/images/carousel/2Stone.jpeg" class="img-fluid" alt="Chania">
+            <img src="/assets/images/carousel/2Stone.jpeg" class="img-fluid" alt="The only one qualified to throw a stone...didn't">
         </div>
 
         <div class="item">
-            <img src="/assets/images/carousel/3Heaven_temples.jpeg" class="img-fluid" alt="Flower">
+            <img src="/assets/images/carousel/3Heaven_temples.jpeg" class="img-fluid" alt="How far is heaven? Not very far. In temples of God it's right where we are.">
         </div>
     </div>
 
